android sign in with fb

--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">HyloReactNative</string>
+    <string name="facebook_app_id">186895474801147</string>
 </resources>
