--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">HyloReactNative</string>
     <string name="facebook_app_id">186895474801147</string>
+    <string name="link_schema">HyloApp</string>
 </resources>
