change app name

--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -1,4 +1,4 @@
 <resources>
-    <string name="app_name">HyloReactNative</string>
+    <string name="app_name">Hylo</string>
     <string name="link_schema">HyloApp</string>
 </resources>
