--- a/CHANGELOG
+++ b/CHANGELOG
@@ -9,4 +9,7 @@ and this project adheres to [Semantic Versioning](https://semver.org/spec/v2.0.0
 ### Added
 ### Changed
 ### Fixed
+
+## [3.0.2] - 2020-01-29
+### Fixed
 - Navigation to "All Communities"
