--- a/CHANGELOG
+++ b/CHANGELOG
@@ -10,6 +10,10 @@ and this project adheres to [Semantic Versioning](https://semver.org/spec/v2.0.0
 ### Changed
 ### Fixed
 
+## [3.0.3] - 2020-01-31
+### Fixed
+- Sign in with Apple
+
 ## [3.0.2] - 2020-01-29
 ### Fixed
 - Navigation to "All Communities"
