--- a/CHANGELOG
+++ b/CHANGELOG
@@ -7,7 +7,10 @@ and this project adheres to [Semantic Versioning](https://semver.org/spec/v2.0.0
 
 ## [Unreleased]
 ### Added
+- Holonic Architecture (Groups) conversion
+- Public Groups
 ### Changed
+- Upgraded ReduxORM
 ### Fixed
 
 ## [3.0.3] - 2020-01-31
