--- a/CHANGELOG
+++ b/CHANGELOG
@@ -4,6 +4,16 @@ All notable changes to HyloReactNative (the Hylo mobile app) will be documented 
 The format is based on [Keep a Changelog](https://keepachangelog.com/en/1.0.0/),
 and this project adheres to [Semantic Versioning](https://semver.org/spec/v2.0.0.html).
 
+## [UNRELEASED]
+### Added
+### Changed
+### Fixed
+
+## [3.1.2]
+### Fixed
+- New Post not appearing in feed
+- "No comments" always showing even when there were comments
+
 ## [3.1.0]
 ### Added
 - Holonic Architecture (Groups) conversion
