--- a/CHANGELOG
+++ b/CHANGELOG
@@ -8,6 +8,7 @@ and this project adheres to [Semantic Versioning](https://semver.org/spec/v2.0.0
 ### Added
 ### Changed
 ### Fixed
+- Keyboard covering Edit Group Settings (in Android) #436
 
 ## [3.1.2]
 ### Fixed
