Add basic styling to Post Type selector

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -6,8 +6,12 @@ and this project adheres to [Semantic Versioning](https://semver.org/spec/v2.0.0
 
 ## [UNRELEASED]
 ### Added
+- More advanced type selector for Post Editor 
 ### Changed
+- Projects can now be created from the main Post Editor window, not only via New Project
+- Swaps color for "Request" and "Project" in accordance with web
 ### Fixed
+- Issue with Post Editor such that it would not forward to a newly created project
 
 ## [3.1.2]
 ### Fixed
