--- a/CHANGELOG
+++ b/CHANGELOG
@@ -6,7 +6,8 @@ and this project adheres to [Semantic Versioning](https://semver.org/spec/v2.0.0
 
 ## [UNRELEASED]
 ### Added
-- More advanced type selector for Post Editor 
+- More advanced type selector for Post Editor
+- Adds geocoded Location selector to Profile edit
 ### Changed
 - Projects can now be created from the main Post Editor window, not only via New Project
 - Swaps color for "Request" and "Project" in accordance with web
