--- a/CHANGELOG
+++ b/CHANGELOG
@@ -8,10 +8,12 @@ and this project adheres to [Semantic Versioning](https://semver.org/spec/v2.0.0
 ### Added
 - More advanced type selector for Post Editor
 - Adds geocoded Location selector to Profile edit
+- Adds geocoded Location selector to Group settings edit
 ### Changed
 - Projects can now be created from the main Post Editor window, not only via New Project
 - Swaps color for "Request" and "Project" in accordance with web
 - Improves Profile view and edit Profile UX
+- Upgrade react-native-data-picker to latest version
 ### Fixed
 - Issue with Post Editor such that it would not forward to a newly created project
 
