Fixes #436 - Keyboard covering Edit Group Settings (in Android) (#441)

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -15,6 +15,7 @@ and this project adheres to [Semantic Versioning](https://semver.org/spec/v2.0.0
 - Improves Profile view and edit Profile UX
 - Upgrade react-native-data-picker to latest version
 ### Fixed
+- Keyboard covering Edit Group Settings (in Android) #436
 - Issue with Post Editor such that it would not forward to a newly created project
 
 ## [3.1.2]
