--- a/CHANGELOG
+++ b/CHANGELOG
@@ -7,8 +7,10 @@ and this project adheres to [Semantic Versioning](https://semver.org/spec/v2.0.0
 ## [3.2.0]
 ### Added
 - More advanced type selector for Post Editor
-- Adds geocoded Location selector to Profile edit
-- Adds geocoded Location selector to Group settings edit
+- Geocoded Location selector to Profile edit
+- Geocoded Location selector to Group settings edit
+- Event RSVP options
+- Pre-requisite groups to Group detail/join page
 ### Changed
 - Projects can now be created from the main Post Editor window, not only via New Project
 - Update Post type colors to be consistent between web and mobile
