--- a/CHANGELOG
+++ b/CHANGELOG
@@ -4,6 +4,19 @@ All notable changes to HyloReactNative (the Hylo mobile app) will be documented 
 The format is based on [Keep a Changelog](https://keepachangelog.com/en/1.0.0/),
 and this project adheres to [Semantic Versioning](https://semver.org/spec/v2.0.0.html).
 
+### [5.1.2] - 2022-12-03
+### Fixed
+- Terms of Service and Privacy Policy links on Login and Signup screens as per Facebook review
+- Comment Editor not expanding height after selecting Mention or Topic #614
+- Initial URL not handled on non-auth when app closed #618
+- Map Saved Search Retrieval changes group, but doesn't keep Map querystring #615
+- New Message > Add Participant search has weird results on adding 2nd participant #613
+- Should forward to Stream on launch #606
+
+### [5.1.1] - 2022-11-17
+### Fixed
+- Amends iOS location permission string to be more specific as per App Store review feedback
+
 ### [3.2.x-5.0.2] - 2022-10-24
 ### Added
 - `HyloWebViewEditor`: A WebView of `HyloMobileEditor` on Web. Replaces `InlineEditor` and includes rich text and interactive mention and topic suggestions
