--- a/CHANGELOG
+++ b/CHANGELOG
@@ -4,6 +4,10 @@ All notable changes to HyloReactNative (the Hylo mobile app) will be documented 
 The format is based on [Keep a Changelog](https://keepachangelog.com/en/1.0.0/),
 and this project adheres to [Semantic Versioning](https://semver.org/spec/v2.0.0.html).
 
+### [5.1.5] - 2022-12-05
+### Fixed
+- Partially addresses #510 and #608 by enabling Android autoVerify on AppLinks. https://www.hylo.com/.well-known/assetlinks.json is validated and now being served.
+
 ### [5.1.3] - 2022-12-03
 ### Fixed
 - Members not loading on initial navigation to screen
