--- a/CHANGELOG
+++ b/CHANGELOG
@@ -4,6 +4,14 @@ All notable changes to HyloReactNative (the Hylo mobile app) will be documented 
 The format is based on [Keep a Changelog](https://keepachangelog.com/en/1.0.0/),
 and this project adheres to [Semantic Versioning](https://semver.org/spec/v2.0.0.html).
 
+### [5.2.3] - 2023-03-31
+### Fixed
+- Fixes topics not appearing when no image
+
+### [5.2.2] - 2023-02-03
+### Fixed
+- Make groupIds be of graphql type ID
+
 ### [5.2.0] - 2022-12-20
 ### Added
 - Topic Chatroom Webview
