Update CHANGELOG for v5.3

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -4,6 +4,12 @@ All notable changes to HyloReactNative (the Hylo mobile app) will be documented 
 The format is based on [Keep a Changelog](https://keepachangelog.com/en/1.0.0/),
 and this project adheres to [Semantic Versioning](https://semver.org/spec/v2.0.0.html).
 
+### [5.3.0] - 2023-08-22
+### Added
+Display which posts are coming from child groups #628
+### Changed
+- Updates to latest React Native 0.72.4 to get into compliance with Google requirements to be on Play API 33+ #648
+
 ### [5.2.3] - 2023-03-31
 ### Fixed
 - Fixes topics not appearing when no image
