--- a/CHANGELOG
+++ b/CHANGELOG
@@ -4,6 +4,15 @@ All notable changes to HyloReactNative (the Hylo mobile app) will be documented 
 The format is based on [Keep a Changelog](https://keepachangelog.com/en/1.0.0/),
 and this project adheres to [Semantic Versioning](https://semver.org/spec/v2.0.0.html).
 
+### [5.4.0] - 2023-12-11
+- My Home added to the menu navigation
+- Group Purpose added to group details
+- Notifications load faster
+- Intercom Support added to navigation
+- Users can create Public posts from mobile
+- Chat channels more readily accessible via group navigation menu
+- Bug fixes
+
 ### [5.3.0] - 2023-08-22
 #### See related Milestone for more detail: https://github.com/Hylozoic/HyloReactNative/milestone/7?closed=1
 - Upgrades to React Native 0.72.4 #648
