Add language selection to login and settings

--- a/locales/en.json
+++ b/locales/en.json
@@ -64,7 +64,7 @@
   "Do you want to change context to this other group?": "Do you want to change context to this other group?",
   "Donation Link": "Donation Link",
   "Done": "Done",
-  "Dont have an account?": "Dont have an account?",
+  "Dont have an account?": "Don't have an account?",
   "Edit": "Edit",
   "Edit Account": "Edit Account",
   "Edit Profile": "Edit Profile",
@@ -111,6 +111,7 @@
   "Join Project": "Join Project",
   "Join Questions": "Join Questions",
   "LOGGING IN": "LOGGING IN...",
+  "Language": "Language",
   "Latest activity": "Latest activity",
   "Leave Project": "Leave Project",
   "Lets Do This!": "Let's Do This!",
@@ -299,15 +300,22 @@
   "characters max": "characters max",
   "comment": "comment",
   "commented": "commented",
+  "discussion": "discussion",
   "edit": "edit",
+  "event": "event",
   "is a member": "is a member",
   "is attending": "is attending",
   "is typing": "is typing",
   "loading": "loading",
+  "offer": "offer",
   "on": "on",
   "other": "other",
   "others": "others",
   "post from child group": "post from child group",
+  "project": "project",
+  "proposal": "proposal",
+  "request": "request",
+  "resource": "resource",
   "we just need to know your name and password and youre account will be created": "we just need to know your name and password and you're account will be created",
   "welcome page backup text": "Please take a moment to explore and see what’s alive in our group. \n \n Introduce yourself by clicking Create, and posting a Discussion to share who you are and what you brings you here. \n \n  Don’t forget to fill our your profile, so likeminded folks can connect with you",
   "{{childGroupsLength}} Group(s) are a part of {{currentGroupName}}": "{{childGroupsLength}} Group(s) are a part of {{currentGroupName}}",
