--- a/locales/es.json
+++ b/locales/es.json
@@ -111,6 +111,7 @@
   "Join Project": "Unirse al proyecto",
   "Join Questions": "Preguntas para unirse",
   "LOGGING IN": "INICIANDO SESIÓN...",
+  "Language": "Idioma",
   "Latest activity": "Última actividad",
   "Leave Project": "Dejar proyecto",
   "Lets Do This!": "¡Hagámoslo!",
@@ -299,15 +300,22 @@
   "characters max": "caracteres máximo",
   "comment": "comentario",
   "commented": "comentó",
+  "discussion": "discusión",
   "edit": "editar",
+  "event": "evento",
   "is a member": "es miembro",
   "is attending": "asiste",
   "is typing": "esta escribiendo",
   "loading": "cargando",
+  "offer": "oferta",
   "on": "en",
   "other": "otro",
   "others": "otros",
   "post from child group": "publicación del grupo infantil",
+  "project": "proyecto",
+  "proposal": "propuesta",
+  "request": "pedido",
+  "resource": "recurso",
   "we just need to know your name and password and youre account will be created": "sólo necesitamos saber su nombre y contraseña y se creará su cuenta",
   "welcome page backup text": "Tómese un momento para explorar y ver qué hay vivo en nuestro grupo.\n \n Preséntate haciendo clic en Crear y publicando una discusión para compartir quién eres y qué te trae aquí.\n \n  No olvide completar nuestro perfil para que personas con ideas afines puedan conectarse con usted.",
   "{{childGroupsLength}} Group(s) are a part of {{currentGroupName}}": "Los grupos {{childGroupsLength}} son parte de {{currentGroupName}}",
