Added missed translations

--- a/locales/es.json
+++ b/locales/es.json
@@ -1,5 +1,5 @@
 {
-  " (explanation required)": "(se requiere explicación)",
+  " (explanation required)": "(explicación requerida)",
   "1 other": "1 más",
   "< Back": "< Atrás",
   "A link to reset your password has been sent to you at {{email}}": "Se le ha enviado un enlace para restablecer su contraseña a {{email}}",
@@ -13,7 +13,7 @@
   "Added": "Agregado",
   "Aim for one or two sentences": "Apunta a una o dos frases",
   "All": "Todo",
-  "All Posts": "Todos los mensajes",
+  "All Posts": "Todos los publicaciones",
   "All good things start somewhere! Lets kick things off with a catchy name for your group": "All good things start somewhere! Let's kick things off with a catchy name for your group.",
   "Already have an account?": "¿Ya tienes una cuenta?",
   "An account may already exist for this email address, Login or try resetting your password": "Es posible que ya exista una cuenta para esta dirección de correo electrónico. Inicie sesión o intente restablecer su contraseña.",
@@ -22,6 +22,7 @@
   "Are you sure you want to block {{name}}?": "¿Estás seguro de que quieres bloquear a {{name}}?",
   "Are you sure you want to delete this comment?": "¿Estás seguro de que quieres eliminar este comentario?",
   "Are you sure you want to delete this post?": "¿Estás seguro de que deseas eliminar esta publicación?",
+  "Are you sure you want to discard your changes?": "¿Está seguro de que desea descartar los cambios?",
   "Are you sure you want to leave the Group Welcome?": "¿Estás seguro de que quieres dejar el grupo Bienvenido?",
   "Are you sure you want to logout?": "¿Está seguro de que desea cerrar sesión?",
   "Are you sure you want to remove this comment?": "¿Estas seguro de que quieres eliminar este comentario?",
@@ -48,16 +49,19 @@
   "Confirm Removal": "Confirmar eliminación",
   "Contact your moderator for another one": "Contacta a tu moderador para otro",
   "Continue": "Continuar",
+  "Continue Editing": "Continua editando",
   "Contribute": "Contribuir",
   "Copy": "Copiar",
   "Copy Link": "Copiar link",
   "Could not sign in with your Apple account": "No se pudo iniciar sesión con su cuenta de Apple",
   "Could not sign in with your Google account": "No se pudo iniciar sesión con su cuenta de Google",
   "Create": "Crear",
+  "Create a post": "Crear una publicación",
   "Current Selection": "Selección actual",
-  "Delete": "Borrar",
+  "Delete": "Eliminar",
   "Deleted User": "Usuario eliminado",
   "Description": "Descripción",
+  "Discard": "Desechar",
   "Discussion": "Discusión",
   "Discussion in progress": "Discusión en curso",
   "Discussions": "Discusiones",
@@ -142,6 +146,7 @@
   "My Profile": "Mi perfil",
   "NEW MESSAGE": "NUEVO MENSAJE",
   "Name": "Nombre",
+  "Newest": "El más nuevo",
   "No": "No",
   "No active conversations": "Sin conversaciones activas",
   "No members currently blocked": "No hay miembros bloqueados actualmente",
@@ -177,7 +182,7 @@
   "Please answer all the join questions to continue": "Por favor responda todas las preguntas sobre cómo unirse para continuar.",
   "Please select below:": "Por favor seleccione a continuación:",
   "Popular": "Popular",
-  "Post": "Correo",
+  "Post": "Publicacion",
   "Post Date": "Fecha de publicación",
   "Post In": "Publicar",
   "Post in Groups": "Publicar en grupos",
@@ -189,7 +194,8 @@
   "Projects": "Proyectos",
   "Proposal details can be edited in the web-app": "Los detalles de la propuesta se pueden editar en la aplicación web.",
   "Proposals": "Propuestas",
-  "Public Map": "Mapa público",
+  "Public Map": "Mapa Público",
+  "Public Stream": "Frujo Público",
   "Quorum": "Quórum",
   "Quorum not reached": "No se alcanzó el quórum",
   "Quorum reached": "Se alcanzó el quórum",
@@ -266,7 +272,13 @@
   "Were almost done, are you sure you want to cancel signing-up?": "Ya casi terminamos, ¿estás seguro de que deseas cancelar el registro?",
   "Were happy youre here": "¡Estamos felices de que estés aquí!",
   "Weve sent a 6 digit code to": "Hemos enviado un código de 6 dígitos a",
+  "What are you looking for help with?": "¿Con qué buscas ayuda?",
+  "What help can you offer?": "¿Qué ayuda puedes ofrecer?",
   "What is the purpose of this group": "¿Cuál es el propósito de este grupo?",
+  "What is your event called?": "¿Cómo se llama tu evento?",
+  "What is your proposal?": "Cual es tu propuesta?",
+  "What resource is available?": "¿Qué recurso está disponible?",
+  "What would you like to call your project?": "¿Cómo te gustaría llamar tu proyecto?",
   "Whats the URL of your group?": "¿Cuál es la URL de tu grupo?",
   "Whats the address for your group": "¿Cuál es la dirección de su grupo?",
   "Whats the name of your group?": "¿Cómo se llama tu grupo?",
@@ -283,6 +295,7 @@
   "Yes": "Sí",
   "You": "Tú",
   "You can unblock this member at any time Go to Settings > Blocked Users": "Puedes desbloquear a este miembro en cualquier momento. \nVaya a Configuración > Usuarios bloqueados.",
+  "You have unsaved changes": "Tiene cambios sin guardar",
   "You will no longer see {{name}}s activity and they wont see yours": "Ya no verás la actividad de {{name}} y ellos no verán la tuya.",
   "Your Full Name": "Tu nombre completo",
   "Your Groups": "Tus grupos",
