--- a/locales/en.json
+++ b/locales/en.json
@@ -22,6 +22,7 @@
   "Are you sure you want to block {{name}}?": "Are you sure you want to block {{name}}?",
   "Are you sure you want to delete this comment?": "Are you sure you want to delete this comment?",
   "Are you sure you want to delete this post?": "Are you sure you want to delete this post?",
+  "Are you sure you want to discard your changes?": "Are you sure you want to discard your changes?",
   "Are you sure you want to leave the Group Welcome?": "Are you sure you want to leave the Group Welcome?",
   "Are you sure you want to logout?": "Are you sure you want to logout?",
   "Are you sure you want to remove this comment?": "Are you sure you want to remove this comment?",
@@ -48,16 +49,19 @@
   "Confirm Removal": "Confirm Removal",
   "Contact your moderator for another one": "Contact your moderator for another one",
   "Continue": "Continue",
+  "Continue Editing": "Continue Editing",
   "Contribute": "Contribute",
   "Copy": "Copy",
   "Copy Link": "Copy Link",
   "Could not sign in with your Apple account": "Could not sign in with your Apple account",
   "Could not sign in with your Google account": "Could not sign in with your Google account",
   "Create": "Create",
+  "Create a post": "Create a post",
   "Current Selection": "Current Selection",
   "Delete": "Delete",
   "Deleted User": "Deleted User",
   "Description": "Description",
+  "Discard": "Discard",
   "Discussion": "Discussion",
   "Discussion in progress": "Discussion in progress",
   "Discussions": "Discussions",
@@ -142,6 +146,7 @@
   "My Profile": "My Profile",
   "NEW MESSAGE": "NEW MESSAGE",
   "Name": "Name",
+  "Newest": "Newest",
   "No": "No",
   "No active conversations": "No active conversations",
   "No members currently blocked": "No members currently blocked",
@@ -190,6 +195,7 @@
   "Proposal details can be edited in the web-app": "Proposal details can be edited in the web-app",
   "Proposals": "Proposals",
   "Public Map": "Public Map",
+  "Public Stream": "Public Stream",
   "Quorum": "Quorum",
   "Quorum not reached": "Quorum not reached",
   "Quorum reached": "Quorum reached",
@@ -266,7 +272,13 @@
   "Were almost done, are you sure you want to cancel signing-up?": "We're almost done, are you sure you want to cancel signing-up?",
   "Were happy youre here": "We’re happy you’re here!",
   "Weve sent a 6 digit code to": "We've sent a 6 digit code to",
+  "What are you looking for help with?": "What are you looking for help with?",
+  "What help can you offer?": "What help can you offer?",
   "What is the purpose of this group": "What is the purpose of this group?",
+  "What is your event called?": "What is your event called?",
+  "What is your proposal?": "What is your proposal?",
+  "What resource is available?": "What resource is available?",
+  "What would you like to call your project?": "What would you like to call your project?",
   "Whats the URL of your group?": "What's the URL of your group?",
   "Whats the address for your group": "What's the address for your group?",
   "Whats the name of your group?": "What's the name of your group?",
@@ -283,6 +295,7 @@
   "Yes": "Yes",
   "You": "You",
   "You can unblock this member at any time Go to Settings > Blocked Users": "You can unblock this member at any time. Go to Settings > Blocked Users.",
+  "You have unsaved changes": "You have unsaved changes",
   "You will no longer see {{name}}s activity and they wont see yours": "You will no longer see {{name}}'s activity and they won't see yours.",
   "Your Full Name": "Your Full Name",
   "Your Groups": "Your Groups",
