--- a/locales/en.json
+++ b/locales/en.json
@@ -4,7 +4,7 @@
   "< Back": "< Back",
   "A link to reset your password has been sent to you at {{email}}": "A link to reset your password has been sent to you at {{email}}",
   "ABOUT ME": "ABOUT ME",
-  "ANNOUNCEMENT-EXPLAINER": "This means that all members of this group will receive an instant email and push notification about this Post. \n (This feature is available to moderators only.)",
+  "announcementExplainer": "This means that all members of this group will receive an instant email and push notification about this Post. \n (This feature is available to moderators only.)",
   "Accept all agreements": "Accept all agreements",
   "Add Participant": "Add Participant",
   "Add a description": "Add a description",
@@ -88,10 +88,11 @@
   "Finish": "Finish",
   "Flag": "Flag",
   "Flag This Member": "Flag This Member",
-  "Forgot password description": "Enter your email address below and we'll send you an \n email message with a link for resetting your password.",
   "Forgot your password?": "Forgot your password?",
   "Go Back": "Go Back",
   "Going": "Going",
+  "Group": "Group",
+  "Group_plural": "Groups",
   "Group Purpose": "Group Purpose",
   "Groups": "Groups",
   "Hi {{firstName}}, press here to post": "Hi {{firstName}}, press here",
@@ -126,7 +127,7 @@
   "Log in now": "Log in now",
   "Log in to Hylo": "Log in to Hylo",
   "Logout": "Logout",
-  "MAKE AN ANNOUNCEMENT": "MAKE AN ANNOUNCEMENT",
+  "makeAnAnnouncement": "MAKE AN ANNOUNCEMENT",
   "MY SKILLS": "MY SKILLS",
   "Make Public": "Make Public:",
   "Manage Notifications": "Manage Notifications",
@@ -135,6 +136,7 @@
   "Mark as read": "Mark as read",
   "Matching": "Matching",
   "Member": "Member",
+  "Member_plural": "Members",
   "Members": "Members",
   "Membership Requested": "Membership Requested",
   "Mentions": "Mentions",
@@ -315,10 +317,13 @@
   "discussion": "discussion",
   "edit": "edit",
   "event": "event",
+  "forgotPasswordDescription": "Enter your email address below and we'll send you an \n email message with a link for resetting your password.",
   "is a member": "is a member",
   "is attending": "is attending",
   "is typing": "is typing",
   "loading": "loading",
+  "manyCommentersInTheFooter": "{{firstPerson}}, {{secondPerson}} and {{count}} other",
+  "manyCommentersInTheFooter_plural": "{{firstPerson}}, {{secondPerson}} and {{count}} others",
   "offer": "offer",
   "on": "on",
   "other": "other",
@@ -328,6 +333,9 @@
   "proposal": "proposal",
   "request": "request",
   "resource": "resource",
+  "shareDialogTitle": "Share \"{{title}}\" by {{name}}",
+  "shareMessage": "\"{{title}}\" by {{name}} on hylo.com: {{url}}",
+  "shareSubject": "\"{{title}}\" by {{name}} on hylo.com",
   "we just need to know your name and password and youre account will be created": "we just need to know your name and password and you're account will be created",
   "welcome page backup text": "Please take a moment to explore and see what’s alive in our group. \n \n Introduce yourself by clicking Create, and posting a Discussion to share who you are and what you brings you here. \n \n  Don’t forget to fill our your profile, so likeminded folks can connect with you",
   "{{childGroupsLength}} Group(s) are a part of {{currentGroupName}}": "{{childGroupsLength}} Group(s) are a part of {{currentGroupName}}",
