use hasResponsibilityForGroup and getResponsibilitiesForGroup to handle user responsibilities

--- a/locales/en.json
+++ b/locales/en.json
@@ -4,7 +4,7 @@
   "< Back": "< Back",
   "A link to reset your password has been sent to you at {{email}}": "A link to reset your password has been sent to you at {{email}}",
   "ABOUT ME": "ABOUT ME",
-  "announcementExplainer": "This means that all members of this group will receive an instant email and push notification about this Post. \n (This feature is available to moderators only.)",
+  "announcementExplainer": "This means that all members of this group will receive an instant email and push notification about this Post. \n (This feature is available to stewards only.)",
   "Accept all agreements": "Accept all agreements",
   "Add Participant": "Add Participant",
   "Add a description": "Add a description",
@@ -47,7 +47,7 @@
   "Confirm Delete": "Confirm Delete",
   "Confirm Password": "Confirm Password",
   "Confirm Removal": "Confirm Removal",
-  "Contact your moderator for another one": "Contact your moderator for another one",
+  "Contact your coordinator for another one": "Contact your coordinator for another one",
   "Continue": "Continue",
   "Continue Editing": "Continue Editing",
   "Contribute": "Contribute",
