--- a/locales/es.json
+++ b/locales/es.json
@@ -47,7 +47,7 @@
   "Confirm Delete": "Confirmar eliminación",
   "Confirm Password": "confirmar Contraseña",
   "Confirm Removal": "Confirmar eliminación",
-  "Contact your moderator for another one": "Contacta a tu moderador para otro",
+  "Contact your coordinator for another one": "Contacta a tu moderador para otro",
   "Continue": "Continuar",
   "Continue Editing": "Continua editando",
   "Contribute": "Contribuir",
