--- a/CHANGELOG
+++ b/CHANGELOG
@@ -6,7 +6,7 @@ and this project adheres to [Semantic Versioning](https://semver.org/spec/v2.0.0
 
 ### [5.6.0]
 
-- 
+- Improves initial load time by reducing initial querying
 
 ### [5.5.2] - 2024-06-04
 
